fixup! [CI] Run pytest for Pull Requests
Co-authored-by: Tom Mulvaney <tom.mulvaney@foundry.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-# A simple workflow to run tests using pytest against supported python versions
+# A simple workflow to run tests using pytest against supported Python versions
 
 name: Tests
 on: [ pull_request ]
