[Build] Extract docs deploy logic into script
In order to support CI builds (see #21), we need some more intelligent
handling of the "nothing to commit" scenario. Attempting to encapsulate
this in single-line `Makefile` commands becomes increasingly hard to
grok.

This splits out the deploy step into a separate script where the logic
is easier to define, and reason about.

Signed-off-by: Tom Cowland <tom@foundry.com>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -74,21 +74,10 @@ DOCSREPO_HTML_DIR = docs
 # The `deploy` target takes an existing `html` directory and updates
 # the `docs` branch on `origin` via a temporary checkout.
 deploy: $(OAIO_DOCS_REPO_DIR)
-	# Ensure there are no uncommitted changes
-	git diff --quiet HEAD ||\
-		(echo "Please commit all changes and rebuild documentation before deploying."; exit 1)
-	# Get current source (short) commit hash, for adding to docs commit message.
-	$(eval commit_hash=$(shell git rev-parse --short HEAD))
-	# Remove any previous documentation.
-	rm -rf $(OAIO_DOCS_REPO_DIR)/$(DOCSREPO_HTML_DIR)
-	# Copy in the new documentation.
-	cp -r ./html $(OAIO_DOCS_REPO_DIR)/$(DOCSREPO_HTML_DIR)
-	# Commit and push the new documentation.
-	cd $(OAIO_DOCS_REPO_DIR) && git add . && git commit -s -m "Update docs to $(commit_hash)" && git push
+	# Deploy the local docs build to the target repo
+	./deploy.sh $(OAIO_DOCS_REPO_DIR)
 	# Remove the clone if we made it.
 	$(DOCSREPO_CLEANUP) && rm -rf $(OAIO_DOCS_REPO_DIR) || true
-	# Pull local docs branch, if one exists.
-	git show-branch docs 2>/dev/null && git fetch origin docs:docs || true
 
 
 $(OAIO_DOCS_REPO_DIR):
