--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,9 @@ jobs:
     - name: Check business language
       run: |
         # Check that the acronym version of OpenAssetIO isn't in use
-        # in the code base (aside from here), see:
+        # in the code base, see:
         #   https://github.com/TheFoundryVisionmongers/OpenAssetIO/issues/153
-        ! grep -ir "oaio" . --exclude=test.yml
+        # NB: The quotes deliberately avoid the string in question
+        # appearing in this file, and failing the test.
+        ! grep -ir "o""aio" .
 
