--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,19 @@ jobs:
             vcvars: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
           }
         - {
-            os: ubuntu-20.04
+            os: ubuntu-20.04,
+            sanitizers: ON
           }
+        - {
+            os: macos-10.15,
+            # asan needs the pre-load trick for python, ubsan seems to
+            # have false positives:
+            #   InfoDictionaryTest.cpp:346:25: runtime error:
+            #      call to function openassetio_v0_0_InfoDictionary_getBool
+            #      through pointer to incorrect function type
+            sanitizers: OFF
+          }
+
 
     steps:
     - uses: actions/checkout@v2
@@ -65,8 +76,8 @@ jobs:
         --toolchain $HOME/conan/conan_paths.cmake 
         -DCMAKE_VERBOSE_MAKEFILE=ON 
         -DOPENASSETIO_ENABLE_TESTS=ON 
-        -DOPENASSETIO_ENABLE_SANITIZER_ADDRESS=ON 
-        -DOPENASSETIO_ENABLE_SANITIZER_UNDEFINED_BEHAVIOR=ON
+        -DOPENASSETIO_ENABLE_SANITIZER_ADDRESS=${{ matrix.config.sanitizers }}
+        -DOPENASSETIO_ENABLE_SANITIZER_UNDEFINED_BEHAVIOR=${{ matrix.config.sanitizers }}
 
     - name: Configure CMake build (Windows)
       if: runner.os == 'Windows'
