--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -48,6 +48,13 @@ jobs:
           path: ~/conan
           key: ubuntu-20.04-conan
 
+      - name: Cache ccache
+        id: cache-ccache
+        uses: actions/cache@v2
+        with:
+          path: ~/ccache
+          key: ubuntu-20.04-ccache
+
       - name: Install dependencies
         # Configure the system and install library dependencies via
         # conan packages.
@@ -65,9 +72,12 @@ jobs:
           --install-prefix $GITHUB_WORKSPACE/dist
           --toolchain $HOME/conan/conan_paths.cmake
           --preset lint
+          -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache
 
       - name: Build and lint
         run: cmake --build build
+        env:
+          CCACHE_DIR: "$HOME/ccache"
 
   sanitizers:
     name: Sanitizers
@@ -81,6 +91,13 @@ jobs:
         with:
           path: ~/conan
           key: ubuntu-20.04-conan
+
+      - name: Cache ccache
+        id: cache-ccache
+        uses: actions/cache@v2
+        with:
+          path: ~/ccache
+          key: ubuntu-20.04-ccache
 
       - name: Install dependencies
         # Configure the system and install library dependencies via
@@ -96,6 +113,9 @@ jobs:
           --install-prefix $GITHUB_WORKSPACE/dist
           --toolchain $HOME/conan/conan_paths.cmake
           --preset sanitize
+          -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache
 
       - name: Build and test
         run: ctest -VV --test-dir build
+        env:
+          CCACHE_DIR: "$HOME/ccache"
