drop! bump to daily
Signed-off-by: Tom Cowland <tom@foundry.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,6 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"  # See docs, they say not to use '.github'
     schedule:
-      interval: "weekly"
+      interval: "daily"
     commit-message:
       prefix: "[CI]"
