--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -19,6 +19,10 @@ jobs:
   publish_testpypi:
     name: Publish distribution 📦 to TestPyPI
     runs-on: ubuntu-20.04
+    # Enable support for PyPIs Trusted Publishers
+    #    https://docs.pypi.org/trusted-publishers
+    permissions:
+       id-token: write
     steps:
       # This action will download the artifact for workflow runs that
       # happen for this actual commit (the commit that the tag points to).
@@ -37,8 +41,6 @@ jobs:
       - name: Upload to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_ACCESS_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
 
   publish_pypi:
@@ -57,6 +59,3 @@ jobs:
 
       - name: Upload to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_ACCESS_TOKEN }}
