[CI] Add TODO to enable Pylint for _openassetio
Pylint has rudimentary support for parsing C extension modules, but
this support does not extend to submodules created within the C
extension module, which we make heavy use of.

So for now just add the required config commented out with a TODO to
revist later, once the issue is resolved upstream.

Signed-off-by: David Feltell <david.feltell@foundry.com>

--- a/src/openassetio-python/pyproject.toml
+++ b/src/openassetio-python/pyproject.toml
@@ -125,6 +125,9 @@ function-rgx = "(_|test_)?[a-z0-9]+([A-Z][a-z0-9]*)*"
 const-rgx = "k([A-Z0-9]+[a-z0-9]*)+_?([A-Z0-9]+[a-z0-9]*)*"
 class-const-rgx = "k([A-Z0-9]+[a-z0-9]*)+_?([A-Z0-9]+[a-z0-9]*)*"
 
+# TODO(DF): Fails on submodules: https://github.com/pylint-dev/pylint/issues/2556
+# extension-pkg-allow-list = ["openassetio._openassetio"]
+
 [tool.pylint.similarities]
 # Ignore imports when computing similarities.
 ignore-imports = true
